syntax = "proto3";

package effectus.v1;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/effectus/effectus-go/gen/effectus/v1;effectusv1";

// FactSchemaService manages fact schema definitions and versioning
service FactSchemaService {
  // RegisterFactSchema registers a new fact schema version
  rpc RegisterFactSchema(RegisterFactSchemaRequest) returns (RegisterFactSchemaResponse);
  
  // GetFactSchema retrieves a specific fact schema version
  rpc GetFactSchema(GetFactSchemaRequest) returns (GetFactSchemaResponse);
  
  // ListFactSchemas lists all available fact schemas
  rpc ListFactSchemas(ListFactSchemasRequest) returns (ListFactSchemasResponse);
  
  // ValidateFactData validates fact data against a schema
  rpc ValidateFactData(ValidateFactDataRequest) returns (ValidateFactDataResponse);
  
  // CheckSchemaCompatibility checks compatibility between schema versions
  rpc CheckSchemaCompatibility(CheckSchemaCompatibilityRequest) returns (CheckSchemaCompatibilityResponse);
}

// Schema represents a Buf-managed protobuf schema
message Schema {
  string name = 1;
  string version = 2;
  string package = 3;
  repeated FieldDescriptor fields = 4;
  repeated string required_fields = 5;
  string description = 6;
  
  // Validation rules
  repeated ValidationConstraint validation_constraints = 7;
  
  // Buf registry information
  string buf_module = 8;
  string buf_commit = 9;
  
  // JSON Schema equivalent (for non-protobuf systems)
  string json_schema = 10;
}

// FieldDescriptor describes a field in a schema
message FieldDescriptor {
  string name = 1;
  int32 number = 2;
  FieldType type = 3;
  string type_name = 4; // For message types
  bool required = 5;
  bool repeated = 6;
  string description = 7;
  
  // Field-level validation
  repeated ValidationConstraint constraints = 8;
  
  // Default value
  google.protobuf.Any default_value = 9;
}

// FieldType represents protobuf field types
enum FieldType {
  FIELD_TYPE_UNSPECIFIED = 0;
  FIELD_TYPE_DOUBLE = 1;
  FIELD_TYPE_FLOAT = 2;
  FIELD_TYPE_INT64 = 3;
  FIELD_TYPE_UINT64 = 4;
  FIELD_TYPE_INT32 = 5;
  FIELD_TYPE_FIXED64 = 6;
  FIELD_TYPE_FIXED32 = 7;
  FIELD_TYPE_BOOL = 8;
  FIELD_TYPE_STRING = 9;
  FIELD_TYPE_GROUP = 10;
  FIELD_TYPE_MESSAGE = 11;
  FIELD_TYPE_BYTES = 12;
  FIELD_TYPE_UINT32 = 13;
  FIELD_TYPE_ENUM = 14;
  FIELD_TYPE_SFIXED32 = 15;
  FIELD_TYPE_SFIXED64 = 16;
  FIELD_TYPE_SINT32 = 17;
  FIELD_TYPE_SINT64 = 18;
}

// ValidationConstraint defines validation rules for fields
message ValidationConstraint {
  string constraint_type = 1; // "range", "pattern", "enum", "length", "custom"
  repeated string values = 2;
  string error_message = 3;
  bool required = 4;
}

// FactSchema defines the structure and validation rules for facts
message FactSchema {
  string name = 1;
  string version = 2; // Buf-managed semantic version
  string description = 3;
  
  // Schema definition
  Schema schema = 4;
  
  // Indexing information for efficient fact lookup
  repeated IndexDefinition indexes = 5;
  
  // Data retention policies
  RetentionPolicy retention = 6;
  
  // Privacy and masking rules
  repeated PrivacyRule privacy_rules = 7;
  
  // Validation rules
  repeated SchemaValidationRule validation_rules = 8;
  
  // Metadata
  map<string, string> metadata = 9;
  
  // Buf schema registry information
  string buf_module = 10;
  string buf_commit = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  
  // Migration information
  MigrationInfo migration_info = 14;
}

// IndexDefinition defines how facts should be indexed
message IndexDefinition {
  string name = 1;
  repeated string fields = 2;
  IndexType type = 3;
  bool unique = 4;
  bool sparse = 5;
  map<string, string> options = 6;
}

// IndexType defines the type of index
enum IndexType {
  INDEX_TYPE_UNSPECIFIED = 0;
  INDEX_TYPE_BTREE = 1;
  INDEX_TYPE_HASH = 2;
  INDEX_TYPE_GIN = 3;
  INDEX_TYPE_GIST = 4;
  INDEX_TYPE_FULLTEXT = 5;
}

// RetentionPolicy defines how long facts should be retained
message RetentionPolicy {
  string duration = 1; // Duration string (e.g., "30d", "1y")
  RetentionStrategy strategy = 2;
  map<string, string> conditions = 3; // Conditional retention rules
}

// RetentionStrategy defines how facts are retained
enum RetentionStrategy {
  RETENTION_STRATEGY_UNSPECIFIED = 0;
  RETENTION_STRATEGY_TIME_BASED = 1;     // Based on creation time
  RETENTION_STRATEGY_COUNT_BASED = 2;    // Keep only N most recent
  RETENTION_STRATEGY_SIZE_BASED = 3;     // Based on storage size
  RETENTION_STRATEGY_CONDITIONAL = 4;    // Based on conditions
}

// PrivacyRule defines privacy and masking rules for sensitive data
message PrivacyRule {
  string field_path = 1;
  PrivacyAction action = 2;
  string mask_pattern = 3; // For masking actions
  repeated string allowed_roles = 4;
  map<string, string> conditions = 5;
}

// PrivacyAction defines privacy actions
enum PrivacyAction {
  PRIVACY_ACTION_UNSPECIFIED = 0;
  PRIVACY_ACTION_MASK = 1;      // Replace with mask pattern
  PRIVACY_ACTION_HASH = 2;      // Replace with hash
  PRIVACY_ACTION_REMOVE = 3;    // Remove field entirely
  PRIVACY_ACTION_ENCRYPT = 4;   // Encrypt field value
  PRIVACY_ACTION_REDACT = 5;    // Replace with "[REDACTED]"
}

// SchemaValidationRule defines additional validation beyond protobuf
message SchemaValidationRule {
  string name = 1;
  string description = 2;
  string field_path = 3;
  ValidationRuleType rule_type = 4;
  repeated string parameters = 5;
  string error_message = 6;
  bool required = 7;
}

// ValidationRuleType defines types of validation rules
enum ValidationRuleType {
  VALIDATION_RULE_TYPE_UNSPECIFIED = 0;
  VALIDATION_RULE_TYPE_RANGE = 1;
  VALIDATION_RULE_TYPE_PATTERN = 2;
  VALIDATION_RULE_TYPE_ENUM = 3;
  VALIDATION_RULE_TYPE_LENGTH = 4;
  VALIDATION_RULE_TYPE_CUSTOM = 5;
  VALIDATION_RULE_TYPE_CROSS_FIELD = 6;
  VALIDATION_RULE_TYPE_TEMPORAL = 7;
}

// MigrationInfo defines how to migrate between schema versions
message MigrationInfo {
  string from_version = 1;
  string to_version = 2;
  repeated MigrationStep migration_steps = 3;
  bool backward_compatible = 4;
  string migration_guide = 5;
}

// MigrationStep defines a single migration step
message MigrationStep {
  int32 step_number = 1;
  string description = 2;
  MigrationStepType step_type = 3;
  map<string, string> parameters = 4;
  bool reversible = 5;
}

// MigrationStepType defines types of migration steps
enum MigrationStepType {
  MIGRATION_STEP_TYPE_UNSPECIFIED = 0;
  MIGRATION_STEP_TYPE_ADD_FIELD = 1;
  MIGRATION_STEP_TYPE_REMOVE_FIELD = 2;
  MIGRATION_STEP_TYPE_RENAME_FIELD = 3;
  MIGRATION_STEP_TYPE_CHANGE_TYPE = 4;
  MIGRATION_STEP_TYPE_ADD_VALIDATION = 5;
  MIGRATION_STEP_TYPE_REMOVE_VALIDATION = 6;
  MIGRATION_STEP_TYPE_TRANSFORM_DATA = 7;
}

// TypedFact represents a fact with schema information
message TypedFact {
  string schema_name = 1;
  string schema_version = 2;
  google.protobuf.Any data = 3;
  google.protobuf.Timestamp timestamp = 4;
  map<string, string> metadata = 5;
  
  // Tracing and provenance
  string trace_id = 6;
  string source = 7;
  
  // Privacy and security
  repeated string applied_privacy_rules = 8;
  string encryption_key_id = 9;
}

// FactCollection represents a collection of typed facts
message FactCollection {
  repeated TypedFact facts = 1;
  string collection_id = 2;
  google.protobuf.Timestamp collected_at = 3;
  map<string, string> metadata = 4;
  
  // Schema information for the collection
  repeated FactSchemaReference schema_references = 5;
}

// FactSchemaReference references a specific schema version
message FactSchemaReference {
  string schema_name = 1;
  string schema_version = 2;
  int32 fact_count = 3;
}

// RegisterFactSchemaRequest registers a new fact schema
message RegisterFactSchemaRequest {
  FactSchema fact_schema = 1;
  bool validate_compatibility = 2;
  bool force_update = 3;
  bool generate_migration = 4;
}

// RegisterFactSchemaResponse confirms fact schema registration
message RegisterFactSchemaResponse {
  bool success = 1;
  string message = 2;
  string assigned_version = 3;
  repeated string compatibility_warnings = 4;
  repeated string breaking_changes = 5;
  MigrationInfo generated_migration = 6;
}

// GetFactSchemaRequest requests a specific fact schema
message GetFactSchemaRequest {
  string name = 1;
  string version = 2; // Optional: latest if not specified
  bool include_migration_info = 3;
}

// GetFactSchemaResponse returns a fact schema
message GetFactSchemaResponse {
  FactSchema fact_schema = 1;
  repeated string compatible_versions = 2;
  repeated string breaking_changes_since = 3;
  repeated MigrationInfo available_migrations = 4;
}

// ListFactSchemasRequest lists fact schemas
message ListFactSchemasRequest {
  string name_filter = 1;
  string version_filter = 2;
  bool include_deprecated = 3;
  bool include_migration_info = 4;
}

// ListFactSchemasResponse returns available fact schemas
message ListFactSchemasResponse {
  repeated FactSchema fact_schemas = 1;
  map<string, string> latest_versions = 2;
  repeated string deprecated_versions = 3;
}

// ValidateFactDataRequest validates fact data against a schema
message ValidateFactDataRequest {
  string schema_name = 1;
  string schema_version = 2;
  google.protobuf.Any fact_data = 3;
  bool strict_validation = 4;
  repeated string ignore_fields = 5;
}

// ValidateFactDataResponse returns validation results
message ValidateFactDataResponse {
  bool valid = 1;
  repeated ValidationError errors = 2;
  repeated ValidationWarning warnings = 3;
  repeated string suggestions = 4;
}

// ValidationError represents a validation error
message ValidationError {
  string field_path = 1;
  string error_code = 2;
  string message = 3;
  google.protobuf.Any actual_value = 4;
  google.protobuf.Any expected_value = 5;
}

// ValidationWarning represents a validation warning
message ValidationWarning {
  string field_path = 1;
  string warning_code = 2;
  string message = 3;
  string suggestion = 4;
}

// CheckSchemaCompatibilityRequest checks compatibility between schemas
message CheckSchemaCompatibilityRequest {
  string schema_name = 1;
  string current_version = 2;
  string target_version = 3;
  bool check_data_compatibility = 4;
}

// CheckSchemaCompatibilityResponse returns compatibility results
message CheckSchemaCompatibilityResponse {
  bool compatible = 1;
  repeated string breaking_changes = 2;
  repeated string warnings = 3;
  MigrationInfo required_migration = 4;
  string compatibility_level = 5; // "full", "backward", "forward", "none"
}

// Predefined standard fact schemas that come with Effectus
// These are examples of how fact schemas should be defined

// StandardFactSchemas contains commonly used fact schemas
message StandardFactSchemas {
  // User and identity facts
  FactSchema user_profile = 1;
  FactSchema user_session = 2;
  FactSchema user_preferences = 3;
  
  // System and operational facts
  FactSchema system_event = 4;
  FactSchema performance_metric = 5;
  FactSchema error_event = 6;
  
  // Business domain facts
  FactSchema transaction = 7;
  FactSchema inventory_item = 8;
  FactSchema order = 9;
  
  // Temporal and audit facts
  FactSchema audit_log = 10;
  FactSchema temporal_fact = 11;
}

// FactSchemaRegistry manages the registry of all fact schemas
message FactSchemaRegistry {
  map<string, FactSchema> schemas = 1;
  string registry_version = 2;
  google.protobuf.Timestamp last_updated = 3;
  
  // Buf registry integration
  string buf_module = 4;
  string buf_commit = 5;
  
  // Schema evolution tracking
  map<string, SchemaEvolution> schema_evolution = 6;
}

// SchemaEvolution tracks the evolution of a schema over time
message SchemaEvolution {
  string schema_name = 1;
  repeated string versions = 2;
  map<string, MigrationInfo> migrations = 3;
  repeated string deprecated_versions = 4;
  string recommended_version = 5;
} 